Semi annual update

--- a/cv.tex
+++ b/cv.tex
@@ -137,7 +137,7 @@
                 \addfontfeature{LetterSpace=20.0}\fontsize{20}{20}\selectfont\scshape
                 Srijan R. Shetty
             }\\
-            \emph{Undergraduate, Dept of Computer Science and Engineering}
+            \emph{Systematic Market Making, Goldman Sachs}
         }
 
         & {\Large\Letter} {\href{mailto:srijan.shetty@gmail.com}{srijan.shetty@gmail.com}}\\
@@ -162,10 +162,10 @@
     {%
         \itemlist {%
                 \textsc{\small Languages} %
-                & \textbf{JavaScript} (Expert), \textbf{Python} (Proficient), \textbf{C++} (Proficient),
-                \textbf{C} (Proficient), \textbf{R} (Intermediate)\\
+                & \textbf{JavaScript} (Expert), \textbf{C++} (Proficient), \textbf{C} (Proficient),
+                  \textbf{Java} (Proficient)\\
                 \textsc{\small Web Dev} %
-                & \textbf{HTML5}, \textbf{CSS}, \textbf{SQL and NoSQL}, \textbf{AngularJS}, \textbf{Nodejs}\\
+                & \textbf{HTML5}, \textbf{CSS}, \textbf{SQL and NoSQL}, \textbf{React}, \textbf{Nodejs}\\
                 \textsc{\small Tools} %
                 & \textbf{Git} (Expert), \textbf{Shell Scripting} (Proficient), \textbf{Vim} (Expert),
                 \textbf{LaTeX} (Proficient)\\
@@ -197,7 +197,7 @@
 
     \textsc{Current} & B. Tech, \textsc{Computer Science and Engineering},
     \textbf{Indian Institute of Technology}, Kanpur
-    & \textbf{9.6/10.0}\\
+    & \textbf{9.6/10}\\
 
     \textsc{July 2011} & 12$^{th}$ Board, \textsc{CBSE} Board,
     \textbf{The Emerald Heights International School}, Indore
@@ -221,6 +221,22 @@
 %----------------------------------------------------------------------------------------
 %
 \section{Work Experience}
+
+% \cproject
+%       {June 2015 - Present}
+%       {Senior Analyst, Systematic Market Making}
+%       {\textsc{Goldman Sachs}, Bangalore}
+%       {}
+%       {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%           \item Worked on EMEA Central Risk Book Business of Goldman Sachs International, London.
+%           \item Analyzed various unwind and RENTD strategies for pro-active risk management.
+%           \item Developed the end-to-end full-stakc infrastructure for centralizing FX \& Delta risk of
+%                 various desk with a dynamic team working on a tech stack of Vertx, Java, React, Redux.
+%           \item Created a technical framework for realtime distributed process monitoring and functional
+%                 testing from scratch.
+%         \end{itemize}
+%       }
 
 \cproject
       {May - June 2015}
@@ -285,6 +301,122 @@
     }
 
 %----------------------------------------------------------------------------------------
+%  PROJECTS
+%----------------------------------------------------------------------------------------
+\vspace{-0.65cm}
+\let\thefootnote\relax\footnote{Monsoon semester: July to November}
+\let\thefootnote\relax\footnote{Winter Semester: January to April}
+\section{Projects}
+
+\cproject
+    {Winter 2014-2015}
+    {Data Sensitive Hashing}
+    {\textsc{\raggedright Indexing and Searching in Databases}, Professor Arnab Bhattacharya}
+    {\href{https://github.com/srijanshetty/data-sensitive-hashing} {[GitHub]}}
+    {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Extended data sensitive hashing using standard Locality Sensitive Hashing extensions
+             to compare effectiveness.
+            \item Implemented entropy based dsh, and multiprobe dsh and analysed relative performance with
+             respect to dsh.
+        \end{itemize}
+    }
+
+\cproject
+    {Winter 2013-2014}
+    {Hindi author attribution}
+    {\textsc{\raggedright Artificial Intelligence}, Professor Amitabha Mukherjee}
+    {\href{https://github.com/srijanshetty/author-attribution} {[GitHub]}}
+    {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+            \item Generated a Hindi literature corpus consisting of works by Tagore,
+                Vibhuti Narayan, Premchand, Sarat Chattopadhyay and Dhamarvir Bharati.
+            \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
+                F-scores in the range of 90-97\% for each author.
+            \item Classified each author using Support Vector Machine using Radial Basis Kernel function
+                and achieved an F-score of 90--95\% for each author.
+            % \item Performed Multiple Discriminant Analysis on the data for a quantitative comparison with word
+            %     collocations; there was no appreciable difference in the results with the F-scores increasing only
+            %     marginally.
+            % \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
+            %     Bing Liu, Jiajun Bu, Chun Chen that was nominated as the best poster by all students.
+        \end{itemize}
+    }
+
+% \cproject
+%     {Winter 2013-2014}
+%     {JavaScript to MIPS Compiler}
+%     {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
+%     {\href{https://github.com/srijanshetty/javascript-compiler} {[GitHub]}}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
+%                 functions, anonymous functions, static types, type annotations, recursion and nested functions.
+%         \end{itemize}
+%     }
+
+% \cproject
+%     {Monsoon 2013-2014}
+%     {NachOS}
+%     {\textsc{Operating Systems}, Professor Mainak Chaudhari}
+%     {\href{https://github.com/srijanshetty/nachos} {[GitHub]}}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
+%                 Join, Yield, Sleep and Exit.
+%             \item Implemented process scheduling algorithms: UNIX Scheduling, First in First Out,
+%                 Round Robin, Shortest Job First and Non-pre-emptive job scheduling to assess their relative performances.
+%             \item Programmed page replacement algorithms: Random Page Allocation, First in First Out,
+%                 Least Recently Used(LRU) and LRU Clock to evaluate relative performances under difference scenarios.
+%         \end{itemize}
+%     }
+
+% \cproject
+%     {Winter 2012-2013}
+%     {8-bit General Purpose Computer on a FPGA}
+%     {\textsc{Computer Organization}, Professor Subhajit Roy}
+%     {\href{https://github.com/srijanshetty/220\_y11} {[GitHub]}}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Designed and programmed a simple \textbf{Instruction set Architecture (ISA)} for a 8-bit General
+%                 Purpose Computer with a \textbf{load-store}
+%                 architecture on \textbf{Xilinx Spartan 3 FPGA} using System Verilog.  Demonstrated recursion, looping
+%                 and conditionals on the Computer by using a simple assembly language.
+%         \end{itemize}
+%     }
+
+%----------------------------------------------------------------------------------------
+%  INDEPENDENT PROJECTS
+%----------------------------------------------------------------------------------------
+% \section{Independent Projects}
+
+% \cproject
+%     {Winter 2014-2015}
+%     {VS-3, Electronic Voting}
+%     {Election Council, IIT Kanpur}
+%     {\href{https://github.com/srijanshetty/elections} {\small{[GitHub]}}}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Designed and created a new electronic voting system in consultation with the \textbf{Students' Senate}
+%                 to facilitate smooth electonic voting in the campus.
+%             \item The voting system was subsequently used in Students'
+%                 Gymkhana General Elections, Hall 8 HEC Elections, Hall 2 HEC Elections and Hall 4 HEC Elections.
+%         \end{itemize}
+%     }
+
+% \cproject
+%     {Summer 2012-2013}
+%     {VANI - Voicing Archiving and Networking Information}
+%     {Professor Manidra Agarwal, Professor T. V. Prabhakar}
+%     {}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Initiated the creation of VANI - an extensible community platform with applications
+%                 for forums, wikis, search, lost and found and calendars.
+%         \end{itemize}
+%     }
+
+%----------------------------------------------------------------------------------------
 %   Awards and Achievements
 %----------------------------------------------------------------------------------------
 \section{Awards and Achievements}
@@ -301,132 +433,18 @@
                                     \textbf{Logic for Computer Science};
                                     \textbf{Fundamentals of Computing};
                                     \textbf{Introduction to Philosophy} \\
-    \textsc{\small 2014-2015}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{\small 2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{\small 2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{\small 2011-2015}   & Recipient of \textbf{Academic Excellence Award}, IIT Kanpur, thrice. \\
     \textsc{\small May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
     \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (\textbf{KVPY}) Fellowship \\
-    \textsc{\small Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
     \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at
                                   Advanced Materials Research Institute, Bhopal\\
+
+    % \textsc{\small 2014-2015}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    % \textsc{\small 2014-2015}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    % \textsc{\small 2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    % \textsc{\small 2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    % \textsc{\small Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
 }
-
-
-%----------------------------------------------------------------------------------------
-%  PROJECTS
-%----------------------------------------------------------------------------------------
-\vspace{-0.65cm}
-\let\thefootnote\relax\footnote{Monsoon semester: July to November}
-\let\thefootnote\relax\footnote{Winter Semester: January to April}
-\section{Projects}
-
-\cproject
-    {Winter 2014-2015}
-    {Data Sensitive Hashing}
-    {\textsc{\raggedright Indexing and Searching Techniques in Databases}, Professor Arnab Bhattacharya}
-    {\href{https://github.com/srijanshetty/data-sensitive-hashing} {[GitHub]}}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Extended data sensitive hashing using standard Locality Sensitive Hashing extensions
-             to compare effectiveness.
-            \item Implemented entropy based dsh, and multiprobe dsh and analysed relative performance with
-             respect to dsh.
-        \end{itemize}
-    }
-
-\cproject
-    {Winter 2013-2014}
-    {JavaScript to MIPS Compiler}
-    {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
-    {\href{https://github.com/srijanshetty/javascript-compiler} {[GitHub]}}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
-                functions, anonymous functions, static types, type annotations, recursion and nested functions.
-        \end{itemize}
-    }
-
-\cproject
-    {Winter 2013-2014}
-    {Hindi author attribution}
-    {\textsc{\raggedright Artificial Intelligence}, Professor Amitabha Mukherjee}
-    {\href{https://github.com/srijanshetty/author-attribution} {[GitHub]}}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
-                Bing Liu, Jiajun Bu, Chun Chen that was nominated as the best poster by all students.
-            \item Generated a Hindi literature corpus consisting of works by Tagore,
-                Vibhuti Narayan, Premchand, Sarat Chattopadhyay and Dhamarvir Bharati.
-            \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
-                F-scores in the range of 90-97\% for each author.
-            \item Classified each author using Support Vector Machine using Radial Basis Kernel function
-                and achieved an F-score of 90--95\% for each author.
-            \item Performed Multiple Discriminant Analysis on the data for a quantitative comparison with word
-                collocations; there was no appreciable difference in the results with the F-scores increasing only
-                marginally.
-        \end{itemize}
-    }
-
-\cproject
-    {Monsoon 2013-2014}
-    {NachOS}
-    {\textsc{Operating Systems}, Professor Mainak Chaudhari}
-    {\href{https://github.com/srijanshetty/nachos} {[GitHub]}}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
-                Join, Yield, Sleep and Exit.
-            \item Implemented process scheduling algorithms: UNIX Scheduling, First in First Out,
-                Round Robin, Shortest Job First and Non-pre-emptive job scheduling to assess their relative performances.
-            \item Programmed page replacement algorithms: Random Page Allocation, First in First Out,
-                Least Recently Used(LRU) and LRU Clock to evaluate relative performances under difference scenarios.
-        \end{itemize}
-    }
-
-\cproject
-    {Winter 2012-2013}
-    {8-bit General Purpose Computer on a FPGA}
-    {\textsc{Computer Organization}, Professor Subhajit Roy}
-    {\href{https://github.com/srijanshetty/220\_y11} {[GitHub]}}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Designed and programmed a simple \textbf{Instruction set Architecture (ISA)} for a 8-bit General
-                Purpose Computer with a \textbf{load-store}
-                architecture on \textbf{Xilinx Spartan 3 FPGA} using System Verilog.  Demonstrated recursion, looping
-                and conditionals on the Computer by using a simple assembly language.
-        \end{itemize}
-    }
-
-%----------------------------------------------------------------------------------------
-%  INDEPENDENT PROJECTS
-%----------------------------------------------------------------------------------------
-% \section{Independent Projects}
-
-\cproject
-    {Winter 2014-2015}
-    {VS-3, Electronic Voting}
-    {Election Council, IIT Kanpur}
-    {\href{https://github.com/srijanshetty/elections} {\small{[GitHub]}}}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Designed and created a new electronic voting system in consultation with the \textbf{Students' Senate}
-                to facilitate smooth electonic voting in the campus.
-            \item The voting system was subsequently used in Students'
-                Gymkhana General Elections, Hall 8 HEC Elections, Hall 2 HEC Elections and Hall 4 HEC Elections.
-        \end{itemize}
-    }
-
-\cproject
-    {Summer 2012-2013}
-    {VANI - Voicing Archiving and Networking Information}
-    {Professor Manidra Agarwal, Professor T. V. Prabhakar}
-    {}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Initiated the creation of VANI - an extensible community platform with applications
-                for forums, wikis, search, lost and found and calendars.
-        \end{itemize}
-    }
 
 %----------------------------------------------------------------------------------------
 %   OTHER SKILLS
@@ -434,16 +452,9 @@
 
 \section {Leadership Skills}
 
-\gitproject
+\skill
     {2014 - 2015}
     {Chief Election Officer, Election Council, IIT Kanpur}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Conducted General Elections, Student's Gymkhana 2014 and
-                Girls Representative Elections, Students' Gymkhana 2014.
-            \item Developed a new voting software from ground up to cater to the needs of IIT Kanpur.
-        \end{itemize}
-    }
 
 \gitproject
     {2014 - 2015}
@@ -465,23 +476,6 @@
         \end{itemize}
     }
 
-\gitproject
-    {2013 -- 2014}
-    {Hospitality Coordinator, Antaragni '13}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Managed a team of \textbf{40 secretaries and 80 volunteers}, over a span of 8 months and ensured a
-                flawless conduction of the festival.
-            \item Chalked out the logistics of \textbf{hospitality and accommodation} of \textbf{1500 participants}
-                with four other coordinators.  Handled security arrangements during the four days of the
-                Festival from 24$^{th}$ to 27$^{th}$ October.
-        \end{itemize}
-    }
-
-\skill
-    {2013 -- 2014}
-    {Member, Gymkhana Review Committee}
-
 \skill
     {2013 -- 2014}
     {Editor-in-chief, Vox Populi, the campus newsletter.}
@@ -489,6 +483,34 @@
 \skill
     {2012 -- 2013}
     {Senator, Students' Senate, IITK Y11 batch.}
+
+% \gitproject
+%     {2014 - 2015}
+%     {Chief Election Officer, Election Council, IIT Kanpur}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Conducted General Elections, Student's Gymkhana 2014 and
+%                 Girls Representative Elections, Students' Gymkhana 2014.
+%             \item Developed a new voting software from ground up to cater to the needs of IIT Kanpur.
+%         \end{itemize}
+%     }
+
+% \gitproject
+%     {2013 -- 2014}
+%     {Hospitality Coordinator, Antaragni '13}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Managed a team of \textbf{40 secretaries and 80 volunteers}, over a span of 8 months and ensured a
+%                 flawless conduction of the festival.
+%             \item Chalked out the logistics of \textbf{hospitality and accommodation} of \textbf{1500 participants}
+%                 with four other coordinators.  Handled security arrangements during the four days of the
+%                 Festival from 24$^{th}$ to 27$^{th}$ October.
+%         \end{itemize}
+%     }
+
+% \skill
+%     {2013 -- 2014}
+%     {Member, Gymkhana Review Committee}
 
 %----------------------------------------------------------------------------------------
 %   COMMUNITY SERVICE
@@ -529,24 +551,24 @@
 %   EXTRA-CURRICULAR ACTIVITIES
 %----------------------------------------------------------------------------------------
 
-\section{Extra-Curricular Activities}
-
-\skill {\href{srijanshetty.quora.com} {[Blog]}}
-       {Sporadic blogger at \href{srijanshetty.in} {srijanshetty.in}}
-
-\gitproject
-    {\href{https://github.com/navya} {\small{[Site]}}}
-    {Hacker, Navya, FOSS Group IIT Kanpur}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Promoted the \textbf{FOSS initiative} in campus by organizing \textbf{student lectures} and meet-ups.
-            \item Built student-centric applications like \textbf{Course Search and Student Search}, to circumvent
-                their legacy institute counterparts.
-        \end{itemize}
-    }
-
-\skill
-    {\href{https://github.com/srijanshetty} {\small{[GitHub]}}}
-    {Active contributor to numerous open source projects}
+% \section{Extra-Curricular Activities}
+%
+% \skill {\href{srijanshetty.quora.com} {[Blog]}}
+%        {Sporadic blogger at \href{srijanshetty.in} {srijanshetty.in}}
+%
+% \gitproject
+%     {\href{https://github.com/navya} {\small{[Site]}}}
+%     {Hacker, Navya, FOSS Group IIT Kanpur}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Promoted the \textbf{FOSS initiative} in campus by organizing \textbf{student lectures} and meet-ups.
+%             \item Built student-centric applications like \textbf{Course Search and Student Search}, to circumvent
+%                 their legacy institute counterparts.
+%         \end{itemize}
+%     }
+%
+% \skill
+%     {\href{https://github.com/srijanshetty} {\small{[GitHub]}}}
+%     {Active contributor to numerous open source projects}
 
 \end{document}
