Update for the new year

--- a/cv.tex
+++ b/cv.tex
@@ -162,8 +162,8 @@
     {%
         \itemlist {%
                 \textsc{\small Languages} %
-                & \textbf{JavaScript} (Expert), \textbf{C++} (Proficient), \textbf{C} (Proficient),
-                  \textbf{Java} (Proficient)\\
+                & \textbf{JavaScript} (Expert), \textbf{Java} (Proficient), \textbf{Python} (Proficient),
+                  \textbf{C/C++} (Intermediate), \textbf{}\\
                 \textsc{\small Web Dev} %
                 & \textbf{HTML5}, \textbf{CSS}, \textbf{SQL and NoSQL}, \textbf{React}, \textbf{Nodejs}\\
                 \textsc{\small Tools} %
@@ -223,20 +223,36 @@
 \section{Work Experience}
 
 % \cproject
-%       {June 2015 - Present}
-%       {Senior Analyst, Systematic Market Making}
+%       {Oct 2017 - Present}
+%       {Analyst, Quant Market Making}
 %       {\textsc{Goldman Sachs}, Bangalore}
 %       {}
 %       {%
 %         \begin{itemize}[leftmargin=\bulletspace{}]
-%           \item Worked on EMEA Central Risk Book Business of Goldman Sachs International, London.
-%           \item Analyzed various unwind and RENTD strategies for pro-active risk management.
-%           \item Developed the end-to-end full-stakc infrastructure for centralizing FX \& Delta risk of
-%                 various desk with a dynamic team working on a tech stack of Vertx, Java, React, Redux.
-%           \item Created a technical framework for realtime distributed process monitoring and functional
-%                 testing from scratch.
+%           \item Worked on franchise on exchange high frequency market making for the MiFiD 2 regime.
+%           \item Worked on the infrastructure to build out Systematic Internalizer and Public Quotes
+%                 to scale at the level of Goldman.
 %         \end{itemize}
 %       }
+
+\cproject
+      {June 2015 - Present}
+      {Analyst, Systematic Market Making}
+      {\textsc{Goldman Sachs}, Bangalore}
+      {}
+      {%
+        \begin{itemize}[leftmargin=\bulletspace{}]
+          \item Worked on EMEA Central Risk Book Business of Goldman Sachs.
+          % \item Analyzed various unwind and RENTD strategies for pro-active risk management, according
+          %       to the alpha profile of flow.
+          \item Developed the end-to-end full-stack infrastructure for centralizing FX \& Delta risk of
+                internal desks with a dynamic team working on a tech stack of Vertx, Java, React, Redux.
+          \item Designed a low latency block pricer REST service in Java and Vertx; dynamically adjusting
+                quotes for volatility and volument in market.
+          \item Created a technical framework for realtime distributed process monitoring and functional
+                testing from scratch.
+        \end{itemize}
+      }
 
 \cproject
       {May - June 2015}
@@ -456,25 +472,29 @@
     {2014 - 2015}
     {Chief Election Officer, Election Council, IIT Kanpur}
 
-\gitproject
+\skill
     {2014 - 2015}
     {Head, Major Events and Competitions, Antaragni '14}
-    {%
-        \begin{itemize}[leftmargin=\bulletspace{}]
-            \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national
-                prelims for Nukkad, Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai,
-                Bangalore, Chandigarh, Bhopal, Lucknow, Kolkata, and Kanpur.
-            \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships,
-                and other non-monetary incentives to the outstanding cultural performers in Antaragni
-                under the banner of \textbf{Dream On} campaign.
-            \item Coordinated the conduction of \textbf{fifty competitions and nine major events} with a team
-                comprising of over \textbf{thousand volunteers}.  Initiated and organized Mr. \& Ms. Fresher's
-                competition and introduced Chreo Night in Antaragni's arsenal of competitions.
-            \item Organized a \textbf{blood donation camp} for the residents of IIT Kanpur to promote awarness
-                about road accidents.  Mobilized information about \textbf{road safety} through infographics
-                and questionnaires via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
-        \end{itemize}
-    }
+
+% \gitproject
+%     {2014 - 2015}
+%     {Head, Major Events and Competitions, Antaragni '14}
+%     {%
+%         \begin{itemize}[leftmargin=\bulletspace{}]
+%             \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national
+%                 prelims for Nukkad, Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai,
+%                 Bangalore, Chandigarh, Bhopal, Lucknow, Kolkata, and Kanpur.
+%             \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships,
+%                 and other non-monetary incentives to the outstanding cultural performers in Antaragni
+%                 under the banner of \textbf{Dream On} campaign.
+%             \item Coordinated the conduction of \textbf{fifty competitions and nine major events} with a team
+%                 comprising of over \textbf{thousand volunteers}.  Initiated and organized Mr. \& Ms. Fresher's
+%                 competition and introduced Chreo Night in Antaragni's arsenal of competitions.
+%             \item Organized a \textbf{blood donation camp} for the residents of IIT Kanpur to promote awarness
+%                 about road accidents.  Mobilized information about \textbf{road safety} through infographics
+%                 and questionnaires via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
+%         \end{itemize}
+%     }
 
 \skill
     {2013 -- 2014}
