Add info about web

--- a/cv.tex
+++ b/cv.tex
@@ -259,6 +259,8 @@
           \item Built a resilient reference data framework which computes static data at the beginning of
                 the day for over thousands of entities in few minutes. The framework is currently being used
                 worldwide within Goldman.
+          \item Overhauled the UI/UX with a React/Redux based soultion on the frontend and a Vertx3 based REST
+                backend to bring our interfaces closer to the industry.
         \end{itemize}
       }
 
