--- a/cv.tex
+++ b/cv.tex
@@ -222,29 +222,30 @@
 \section{Work Experience}
 
 \cproject
-      {Oct 2017 - Present}
+      {Dec 2017 - Present}
       {Analyst, Systematic Market Making}
       {\textsc{Goldman Sachs}, Bangalore}
       {}
       {%
         \begin{itemize}[leftmargin=\bulletspace{}]
-          \item Worked with the exchange market making team for the MiFiD II regime.
-          \item Scaled the web infrastructure (based on Vertx \& Angular) to match their intensive
-                data requirements.
-          \item Worked on fast PnL computation of One Delta Products.
-          \item Worked on the infrastructure to build out Systematic Internalizer and Public Quotes
-                to scale at the level of Goldman.
+          \item Worked on Principal Liquidity Provision and systematic internalizer (SI) for the MiFiD II regime.
+          % \item Worked on the infrastructure to build out Systematic Internalizer and Public Quotes
+                % to scale at the level of Goldman.
+          \item Scaled the web infrastructure (based on Vertx \& Angular) as a full stack developer, to visualize
+                and monitor realtime data streams over web sockets.
+          \item Optimized PnL computations in python and worked on chunked messaging over ZeroMQ for performant
+                message delivery.
+          \item Maintained the entire Java footprint of the team.
         \end{itemize}
       }
 
 \cproject
-      {June 2015 - Oct 2017}
+      {June 2015 - Nov 2017}
       {Analyst, Central Risk Book}
       {\textsc{Goldman Sachs}, Bangalore}
       {}
       {%
         \begin{itemize}[leftmargin=\bulletspace{}]
-          \item Worked on EMEA Central Risk Book Business of Goldman Sachs.
           \item Analyzed various unwind and RENTD strategies for pro-active risk management, according
                 to the alpha profile of flow.
           \item Developed the end-to-end full-stack infrastructure for centralizing FX \& Delta risk of
@@ -346,8 +347,8 @@
 %  PROJECTS
 %----------------------------------------------------------------------------------------
 \vspace{-0.65cm}
-\let\thefootnote\relax\footnote{Monsoon semester: July to November}
-\let\thefootnote\relax\footnote{Winter Semester: January to April}
+% \let\thefootnote\relax\footnote{Monsoon semester: July to November}
+% \let\thefootnote\relax\footnote{Winter Semester: January to April}
 \section{Projects}
 
 \cproject
